<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
   	<TextView 
    	android:text="@string/widget_setting_lyt_choose_word_book"
    	android:gravity="center"
    	android:layout_marginTop="10dp"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"/>
    <Spinner
    	android:id="@+id/widgetSetting_spinner"
    	android:layout_marginTop="10dp"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"/>
    <TextView 
    	android:text="@string/widget_setting_lyt_pick_color"
    	android:id="@+id/setting_tv_2"
    	android:gravity="center"
    	android:layout_marginTop="10dp"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"/>
    <Button 
    	android:text="@string/widget_setting_lyt_pick_color_btn"
    	android:gravity="center"
    	android:layout_marginTop="10dp"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
    	android:onClick="setColor"/>
    <Button 
    	android:text="@string/widget_setting_lyt_done_btn"
    	android:gravity="center"
    	android:layout_marginTop="10dp"
    	android:layout_gravity="center"
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
    	android:onClick="finishSetting"/>
</LinearLayout>
