<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:orientation="vertical">
		<LinearLayout
		    android:id="@+id/editWord_LL"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:orientation="vertical">
			<LinearLayout
				android:layout_marginTop="15dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" 
				android:orientation="horizontal">
				<EditText 
					android:hint="@string/edit_word_lyt_question"
					android:id="@+id/editWord_questionET"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:maxLength="50"
					android:layout_weight="1"/>
				<ImageButton
				    android:id="@+id/editWord_voice_recognizer_1"
				    android:onClick="voiceRecognition"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:src="@drawable/ic_menu_microphone"
				    android:contentDescription="@string/edit_word_lyt_voice_recognition"/>
			</LinearLayout>
			<LinearLayout 
				android:layout_marginTop="15dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<EditText 
					android:hint="@string/edit_word_lyt_answer"
					android:id="@+id/editWord_answerET" 
					android:layout_width="match_parent"
					android:layout_height="wrap_content" 
					android:singleLine="true"
					android:maxLength="50"
					android:layout_weight="1"/>
				<ImageButton
				    android:id="@+id/editWord_voice_recognizer_2"
				    android:onClick="voiceRecognition"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:src="@drawable/ic_menu_microphone"
				    android:contentDescription="@string/edit_word_lyt_voice_recognition"/>
			</LinearLayout>
			<LinearLayout 
				android:layout_width="match_parent"
				android:layout_height="wrap_content" 
				android:layout_marginTop="15dp"
				android:orientation="horizontal">
				<TextView 
					android:text="@string/edit_word_lyt_explanation"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_gravity="center"/>
				<ImageButton
				    android:id="@+id/editWord_voice_recognizer_3"
				    android:onClick="voiceRecognition"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:src="@drawable/ic_menu_microphone"
				    android:contentDescription="@string/edit_word_lyt_voice_recognition"/>
			</LinearLayout>
			<EditText 
				android:hint="@string/edit_word_lyt_explanation"
				android:id="@+id/editWord_explanationET" 
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autoText="true"/>
			<Button
				android:text="@string/edit_word_lyt_save"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:onClick="saveWord"/>
		</LinearLayout>
	</ScrollView>
	<ListView 
        android:id="@+id/editWord_LV"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"/>
</LinearLayout>

